# font-generator

./: CLAUDE.md  CONTRIBUTING.md  COPYRIGHT.md  LICENSE.md  README.md  pyproject.toml
minecraft_fontgen/: __init__.py  asset_source.py  bitmap_sheets.py  cli.py  colour_sidecar.py  config.py  file_io.py  font_creator.py  functions.py  main.py  piston.py  stored_codepoint.py
minecraft_fontgen/glyph/: glyph.py  glyph_storage.py
minecraft_fontgen/table/: header.py  name.py  truetype.py
tests/: conftest.py  helpers.py  test_alternate_fonts.py  test_asset_source.py  test_asset_stack.py  test_binarization.py  test_bitmap_sheets.py  test_cli.py  test_color_classify.py  test_color_cli.py  test_color_compile.py  test_color_determinism.py  test_color_end_to_end.py  test_color_ingest.py  test_color_per_pack.py  test_color_rgba.py  test_color_sbix.py  test_color_sidecar.py  test_end_to_end.py  test_golden_vanilla.py  test_grid_slicing.py  test_main_wiring.py  test_merge_priority.py  test_mono_oversized.py  test_provider_parsing.py  test_resource_refs.py  test_scaling_advance.py  test_smoke.py  test_stored_codepoint.py
